Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/scope/6225935/Estatico4.out
Estatico4.java:16:24: compiler.err.ref.ambiguous: CENTER, kindname.variable, CENTER, java.awt.FlowLayout, kindname.variable, CENTER, javax.swing.SwingConstants
1 error
